# visual_inertial_bundle_adjustment

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  pixi.toml
.github/workflows/: ci.yml
interfaces/: CMakeLists.txt
interfaces/ark/: CMakeLists.txt  main_AriaKit_ViBa.cpp  main_AriaKit_ViBa_GUI.cpp  main_ProcessVRS.cpp
interfaces/ark/camera_model/: CameraModelParam.cpp  CameraModelParam.h  RandomWalkCov.cpp  RandomWalkCov.h
interfaces/ark/extrinsics_model/: RandomWalkCov.cpp  RandomWalkCov.h
interfaces/ark/gui/: Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  HistogramExtractor.h  MonitoringState.h  Viewer3D.cpp  Viewer3D.h  sokol_app_imgui.cpp
interfaces/ark/imu_model/: ImuCalibParam.cpp  ImuCalibParam.h  RandomWalkCov.cpp  RandomWalkCov.h
interfaces/ark/io/: SaveDeviceTrajectory.cpp  SaveDeviceTrajectory.h  SaveOnlineCalib.cpp  SaveOnlineCalib.h
interfaces/ark/point_observation/: PointObservation.h  PointObservationFormat.h  PointObservationReader.cpp  PointObservationReader.h  PointObservationWriter.cpp  PointObservationWriter.h
interfaces/ark/preint/: PreIntegration.h
interfaces/ark/rolling_shutters/: RollingShutterData.h
interfaces/ark/session_data/: ImuCalibConversion.cpp  ImuCalibConversion.h  SessionData.cpp  SessionData.h
lib/: CMakeLists.txt
lib/motion/: CMakeLists.txt
lib/motion/imu_types/: CMakeLists.txt  ImuCalibrationJacobianIndices.h  ImuCalibrationOptions.h  ImuDataFormat.h  ImuDataReader.cpp  ImuDataReader.h  ImuDataWriter.cpp  ImuDataWriter.h  ImuMeasurement.h  ImuMeasurementModelParameters.h  ImuNoiseModelParameters.h  SignalStatistics.h
lib/motion/preintegration/: CMakeLists.txt  CompensateJac.cpp  CompensateJac.h  ImuTypes.h  ImuUtils.cpp  ImuUtils.h  MotionIntegral.cpp  MotionIntegral.h  PreIntegration.cpp  PreIntegration.h  RollingShutterData.cpp  RollingShutterData.h
lib/motion/preintegration/tests/: CMakeLists.txt  TestCompensateJac.cpp  TestMotionIntegral.cpp  TestPreIntegration.cpp
lib/small_thing/: AtomicOps.h  CMakeLists.txt  Common.h  CondensedFactor.h  Factor.h  Optimizer.cpp  Optimizer.h  PCG.cpp  PCG.h  Preconditioner.h  Print.cpp  Print.h  Proxies.h  SoftLoss.h  Variable.h
lib/small_thing/tests/: CMakeLists.txt  TestCondensedFactor.cpp  TestDynamicVars.cpp  TestOptimizer.cpp  TestPCG.cpp
tools/save_observations/: LICENSE  README.md  defaults.yaml  requirements.txt  ruff.toml  save_observations.py
tools/save_observations/lamaria/: __init__.py
tools/save_observations/lamaria/config/: options.py  pipeline.py
tools/save_observations/lamaria/pipeline/: estimate_to_timed_reconstruction.py  keyframe_selection.py  triangulation.py
tools/save_observations/lamaria/structs/: timed_reconstruction.py  trajectory.py
tools/save_observations/lamaria/utils/: aria.py  constants.py
viba/: CMakeLists.txt
viba/common/: CMakeLists.txt  Constants.h  Enumerate.h  FindOrDie.h  Format.h  Histogram.cpp  Histogram.h  Report.cpp  Report.h  Settings.cpp  Settings.h  StatsValueContainer.cpp  StatsValueContainer.h  Utf8Symbols.h
viba/problem/: BaseMapVisualFactor.cpp  BaseMapVisualFactor.h  CMakeLists.txt  Histograms.cpp  Histograms.h  InertialFactor.cpp  MultiSessionHistogramImpl.h  MultiSessionProblem.h  MultiSessionProblemImpl.h  OmegaPriorFactor.cpp  PointRefinement.cpp  PointRefinement.h  PriorFactor.cpp  RandomWalkFactor.cpp  SingleSessionProblem.cpp  SingleSessionProblem.h  Stats.cpp  Stats.h  Types.h  VisualFactor.cpp
viba/single_session/: CMakeLists.txt  EvalCalibration.cpp  FactoryCalibPriors.cpp  InertialFactors.cpp  InitCalibration.cpp  InitPointTracks.cpp  InitRescaling.cpp  InitRigs.cpp  Matcher.cpp  Matcher.h  OmegaPriors.cpp  RandomWalkFactors.cpp  SingleSessionAdapter.cpp  SingleSessionAdapter.h  TrajectoryBase.h  Triangulation.cpp  Triangulation.h  VisualFactors.cpp
